button adds an arrow

--- a/ARMap/Base.lproj/Main.storyboard
+++ b/ARMap/Base.lproj/Main.storyboard
@@ -16,6 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </arscnView>
+                    <connections>
+                        <outlet property="sceneView" destination="QU2-cr-wbz" id="7O6-VV-Ewj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
